[package]
authors = ["Simon Labrecque <simon@wegel.ca>"]
edition = "2021"
license = "MIT"
name = "ingot"
publish = false
version = "0.0.1"

[dependencies]
bitflags = "2.2.1"
fps_ticker = {version = "1.0.0", optional = true}
image = {version = "0.25.1", default-features = false, optional = true, features = ["png"]}
rand = "0.8"
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
thiserror = "1"
xcursor = {version = "0.3.3", optional = true}
xkbcommon = "0.8.0"
renderdoc = {version = "0.11.0", optional = true}
smithay-drm-extras = {version = "0.1.0", optional = true}
puffin_http = { version = "0.13", optional = true }
profiling = { version = "1.0" }

[dependencies.smithay]
git = "https://github.com/smithay/smithay.git"
rev = "20d2dac"
default-features = false
features = [
    "wayland_frontend",
    "desktop",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "renderer_glow",
    "renderer_multi",
]


[build-dependencies]
gl_generator = "0.14"

[features]
debug = ["fps_ticker", "image/png", "renderdoc"]
default = ["egl", "udev"]
egl = ["smithay/use_system_lib", "smithay/backend_egl"]
test_all_features = ["default", "debug"]
udev = [
  "smithay-drm-extras",
  "smithay/backend_libinput",
  "smithay/backend_udev",
  "smithay/backend_drm",
  "smithay/backend_gbm",
  "smithay/backend_vulkan",
  "smithay/backend_egl",
  "smithay/backend_session_libseat",
  "image",
  "smithay/renderer_gl",
  "smithay/renderer_pixman",
  "smithay/renderer_multi",
  "xcursor",
]
profile-with-puffin = ["profiling/profile-with-puffin", "puffin_http"]
profile-with-tracy = ["profiling/profile-with-tracy"]
profile-with-tracy-mem = ["profile-with-tracy"]
renderer_sync = []
